# etl_fake_database

./: Dockerfile  README.md  docker-compose.yml  fake_generate.py  main.py  pyproject.toml
backend/: APIOrchestrator.py  contracts.py  fake_generate.py  fastapi.py
backend/api/: fastapi.py
backend/contracts/: contracts.py
data/pgadmin/: pgadmin4.db
data/pgadmin/sessions/: e6b8afd5-d765-476a-8f0c-371a45d54865
