[project]
name = "etl-fake-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.8.0",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
